fix create color select being too small

--- a/client/src/ui/Lobby/create/create.scss
+++ b/client/src/ui/Lobby/create/create.scss
@@ -34,7 +34,7 @@
     }
 
     .selected{
-        box-shadow:#cddc39 0px 0px 5px 3px !important;
+        box-shadow:#b8a776 0px 0px 3px 3px !important;
     }
     select {
         -webkit-appearance: none;
@@ -91,9 +91,12 @@
                 // background-color: #4caf50;
                 background-color: m.$type-bg-clr;
                 .piece-color{
+                    margin-left: 0.5rem;
+                    margin-right: 0.5rem;
                     border-radius: m.$border-radius;
                     z-index:20;
                     padding: .3rem;
+                    min-height: 100%;
                     max-height: 18vh;
                     margin: 0rem 1.5rem .25rem 1.5rem;
                     .pieces {
